--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-resource": "1.5.x",
     "angular-route": "1.5.x",
     "angular-bootstrap": "^2.1.3",
-    "angular-gettext": "^2.3.8"
+    "angular-gettext": "^2.3.8",
+    "angular-socket-io": "^0.7.0"
   }
 }
