--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,13 @@
   "private": true,
   "dependencies": {
     "jquery": "2.2.x",
-    "angular": "1.5.x",
-    "angular-animate": "1.5.x",
-    "angular-resource": "1.5.x",
-    "angular-route": "1.5.x",
+    "angular": "1.6.x",
+    "angular-animate": "1.6.x",
+    "angular-resource": "1.6.x",
+    "angular-route": "1.6.x",
     "angular-bootstrap": "^2.1.3",
     "angular-gettext": "^2.3.8",
-    "angular-socket-io": "^0.7.0"
+    "angular-socket-io": "^0.7.0",
+    "angular-cookies": "^1.6.1"
   }
 }
