--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta6",
+    "random-string": "^0.1.2",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.7.2"
   }
